force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Submit_Description__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Submit_Description__c</fullName>
    <description>This text appears at the top of the submit page where confirmation of selections is given and the user submits their registration.</description>
    <inlineHelpText>This text appears at the top of the submit page where confirmation of selections is given and the user submits their registration.</inlineHelpText>
    <label>Event Submit Description</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>