force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Submit_Title__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Submit_Title__c</fullName>
    <description>Title that appears on the event submit registration page. Appears when using Appointment Options.</description>
    <inlineHelpText>Title that appears on the event submit registration page. Appears when using Appointment Options.</inlineHelpText>
    <label>Event Submit Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>