force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Type__c</fullName>
    <description>The general event type this event fits into.</description>
    <inlineHelpText>The general event type this event fits into.</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admissions Event</fullName>
            </value>
            <value>
                <fullName>Class Visit</fullName>
            </value>
            <value>
                <fullName>Coffee Chat</fullName>
            </value>
            <value>
                <fullName>Counselor Meet-up</fullName>
            </value>
            <value>
                <fullName>Cultivation_or_Stewardship</fullName>
                <label>Cultivation or Stewardship</label>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Info Session</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Open House</fullName>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>