force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Feed_Registration_Button_Text__c.field-meta.xml
<CustomField>
    <fullName>summit__Feed_Registration_Button_Text__c</fullName>
    <defaultValue>&quot;Register&quot;</defaultValue>
    <description>The text of the registration link in the feeds that appear on external Web sites. Will default to &quot;Register&quot; if not defined.</description>
    <inlineHelpText>The text of the registration link in the feeds that appear on external Web sites. Will default to &quot;Register&quot; if not defined.</inlineHelpText>
    <label>Feed Registration Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>