force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Filter_Where_To_Display__c.field-meta.xml
<CustomField>
    <fullName>summit__Filter_Where_To_Display__c</fullName>
    <description>Selected values can be used to scope the Summit Events Feed Rest API results.</description>
    <inlineHelpText>Selected values can be used to scope the Summit Events Feed Rest API results.</inlineHelpText>
    <label>Filter Where To Display</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Websites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>