force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Gender_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Gender_Label__c</fullName>
    <defaultValue>&quot;Gender&quot;</defaultValue>
    <description>Label for the Gender field in the Registration Form</description>
    <inlineHelpText>Label for the Gender field in the Registration Form</inlineHelpText>
    <label>Gender Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>