force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Guest_Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>summit__Guest_Max_Amount__c</fullName>
    <description>The maximum amount of guest registrants a given event registrant can register. If left blank amount is infinite.</description>
    <inlineHelpText>The maximum amount of guest registrants a given event registrant can register. If left blank amount is infinite.</inlineHelpText>
    <label>Guest Max Amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>