force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Guest_Registration_Add_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Guest_Registration_Add_Button_Label__c</fullName>
    <description>The text that will appear as a button at the bottom of the guest registration form when a registrant adds a guest registration. Defaults to &quot;Register Guest.&quot;</description>
    <inlineHelpText>The text that will appear as a button at the bottom of the guest registration form when a registrant adds a guest registration. Defaults to &quot;Register Guest.&quot;</inlineHelpText>
    <label>Guest Registration Add Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>