force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Guest_Registration_Description__c.field-meta.xml
<CustomField>
    <fullName>summit__Guest_Registration_Description__c</fullName>
    <description>Descriptive text that appears under the title of the Guest Registration page.</description>
    <inlineHelpText>Descriptive text that appears under the title of the Guest Registration page.</inlineHelpText>
    <label>Guest Registration Description</label>
    <length>8000</length>
    <type>Html</type>
</CustomField>