force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Guest_Registration_Title__c.field-meta.xml
<CustomField>
    <fullName>summit__Guest_Registration_Title__c</fullName>
    <description>Title that appears at the top of the Guest Registration page.</description>
    <inlineHelpText>Title that appears at the top of the Guest Registration page.</inlineHelpText>
    <label>Guest Registration Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>