force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Guest_Table_Size__c.field-meta.xml
<CustomField>
    <fullName>summit__Guest_Table_Size__c</fullName>
    <description>The amount of guests that will fill each table (if table option is active).</description>
    <inlineHelpText>The amount of guests that will fill each table (if table option is active).</inlineHelpText>
    <label>Guest Table Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>