force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Guest_Tables_Available__c.field-meta.xml
<CustomField>
    <fullName>summit__Guest_Tables_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow registrant to register guests by table.</description>
    <inlineHelpText>Allow registrant to register guests by table.</inlineHelpText>
    <label>Guest Tables Available</label>
    <type>Checkbox</type>
</CustomField>