force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Guest_Unsaved_Cancel_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Guest_Unsaved_Cancel_Label__c</fullName>
    <defaultValue>&quot;Cancel&quot;</defaultValue>
    <description>The label of the cancel button on the dialog that pops up when unsaved guest data is present.</description>
    <inlineHelpText>The label of the cancel button on the dialog that pops up when unsaved guest data is present.</inlineHelpText>
    <label>Guest Unsaved Cancel Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>