force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Guest_Unsaved_Continue_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Guest_Unsaved_Continue_Label__c</fullName>
    <defaultValue>&quot;Continue&quot;</defaultValue>
    <description>TThe label of the continue button on the dialog that pops up when unsaved guest data is present.</description>
    <inlineHelpText>The label of the continue button on the dialog that pops up when unsaved guest data is present.</inlineHelpText>
    <label>Guest Unsaved Continue Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>