force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Guest_Unsaved_Modal_Text__c.field-meta.xml
<CustomField>
    <fullName>summit__Guest_Unsaved_Modal_Text__c</fullName>
    <defaultValue>&quot;You have unsaved Guest information entered. Select Cancel to finish adding your guests.&quot;</defaultValue>
    <description>This text appears in the dialog that pops up if unsaved guest information is present.</description>
    <inlineHelpText>This text appears in the dialog that pops up if unsaved guest information is present.</inlineHelpText>
    <label>Guest Unsaved Modal Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>