force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Hand_Raise_Action__c.field-meta.xml
<CustomField>
    <fullName>summit__Hand_Raise_Action__c</fullName>
    <defaultValue>&quot;Touchpoint&quot;</defaultValue>
    <description>Creates a system based receipt of client interest outside of the event application.</description>
    <inlineHelpText>Creates a system based receipt of client interest outside of the event application.</inlineHelpText>
    <label>Hand Raise Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Touchpoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>