force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Include_Time_frame_List__c.field-meta.xml
<CustomField>
    <fullName>summit__Include_Time_frame_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ask the client for a general time-frame for event (drop down)</description>
    <inlineHelpText>Ask the client for a general time-frame for event (drop down)</inlineHelpText>
    <label>Include Time frame List</label>
    <type>Checkbox</type>
</CustomField>