force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Itinerary_Display_Options__c.field-meta.xml
<CustomField>
    <fullName>summit__Itinerary_Display_Options__c</fullName>
    <description>Relationship style of label to itinerary item information.</description>
    <inlineHelpText>Relationship style of label to itinerary item information.</inlineHelpText>
    <label>Itinerary Display Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labels as headers</fullName>
            </value>
            <value>
                <fullName>Labels inline with colon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>