force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Itinerary_Item_3__c.field-meta.xml
<CustomField>
    <fullName>summit__Itinerary_Item_3__c</fullName>
    <description>The third field to show in an itinerary item list item.</description>
    <inlineHelpText>The third field to show in an itinerary item list item.</inlineHelpText>
    <label>Itinerary Item 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>summit__Summit_Events_Appointment_Fields</valueSetName>
    </valueSet>
</CustomField>