force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Itinerary_Label_1__c.field-meta.xml
<CustomField>
    <fullName>summit__Itinerary_Label_1__c</fullName>
    <description>A descriptive label that can appear next to itinerary appointment items.</description>
    <inlineHelpText>A descriptive label that can appear next to itinerary appointment items.</inlineHelpText>
    <label>Itinerary Label 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>