force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Itinerary_Table_Head_Or_Title_2__c.field-meta.xml
<CustomField>
    <fullName>summit__Itinerary_Table_Head_Or_Title_2__c</fullName>
    <description>If a itinerary style is set to have a table heading or a title the text of the title/head is set here.</description>
    <inlineHelpText>If a itinerary style is set to have a table heading or a title the text of the title/head is set here.</inlineHelpText>
    <label>Itinerary Table Head Or Title 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>