force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Keep_Registration_Open_During_Event__c.field-meta.xml
<CustomField>
    <fullName>summit__Keep_Registration_Open_During_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked registrants will be able to register for the event even while the event is happening.</description>
    <inlineHelpText>When checked registrants will be able to register for the event even while the event is happening.</inlineHelpText>
    <label>Keep Registration Open During Event</label>
    <type>Checkbox</type>
</CustomField>