force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Last_Name_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Last_Name_Label__c</fullName>
    <defaultValue>&quot;Last Name&quot;</defaultValue>
    <description>Label for the Last Name field in the Registration Form</description>
    <inlineHelpText>Label for the Last Name field in the Registration Form</inlineHelpText>
    <label>Last Name Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>