force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Lead_Creation_Duplicate_Rule__c.field-meta.xml
<CustomField>
    <fullName>summit__Lead_Creation_Duplicate_Rule__c</fullName>
    <label>Lead Creation Duplicate Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Lead Duplicate Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>