force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Lead_Matching_No_Match_Behavior__c.field-meta.xml
<CustomField>
    <fullName>summit__Lead_Matching_No_Match_Behavior__c</fullName>
    <label>Lead Matching No Match Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Lead</fullName>
            </value>
            <value>
                <fullName>Skip Creating Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>