force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Lead_Matching_Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>summit__Lead_Matching_Rule_Description__c</fullName>
    <formula>&quot;Salesforce Duplicate Rule:&quot; &amp; BR() &amp;
&quot;* Custom Matching Rule that allows organizations to create their own matching logic using a Salesforce Duplicate Rule&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Matching Rule Description</label>
    <type>Text</type>
</CustomField>