force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Lead_matching_rules__c.field-meta.xml
<CustomField>
    <fullName>summit__Lead_matching_rules__c</fullName>
    <label>Lead matching rules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use Salesforce Duplicate Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>