force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Location_Address__c.field-meta.xml
<CustomField>
    <fullName>summit__Location_Address__c</fullName>
    <description>The address of the location the event is taking place.</description>
    <inlineHelpText>The address of the location the event is taking place.</inlineHelpText>
    <label>Location Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>