force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Location_Map_Link__c.field-meta.xml
<CustomField>
    <fullName>summit__Location_Map_Link__c</fullName>
    <description>Link to a map (either campus map, google map, etc) of the location of the event.</description>
    <inlineHelpText>Link to a map (either campus map, google map, etc) of the location of the event.</inlineHelpText>
    <label>Location Map Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>