force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Location_Title__c.field-meta.xml
<CustomField>
    <fullName>summit__Location_Title__c</fullName>
    <description>Title of the location the event is taking place.</description>
    <inlineHelpText>Title of the location the event is taking place.</inlineHelpText>
    <label>Location Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>