force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Location_Type__c.field-meta.xml
<CustomField>
    <fullName>summit__Location_Type__c</fullName>
    <description>Campus the event will be hosted or off campus.</description>
    <inlineHelpText>Campus the event will be hosted or off campus.</inlineHelpText>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Off-Campus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>