force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Mailing_Address_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Mailing_Address_Label__c</fullName>
    <defaultValue>&quot;Registrant Address&quot;</defaultValue>
    <description>Label for the Mailing Address field in the Registration Form</description>
    <inlineHelpText>Label for the Mailing Address field in the Registration Form</inlineHelpText>
    <label>Mailing Address Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>