force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Max_Other_Attendees__c.field-meta.xml
<CustomField>
    <fullName>summit__Max_Other_Attendees__c</fullName>
    <description>If other attendees is active, how many other attendees are allowed to this event. This does NOT prompt the Guest Registration process, but will add amount to the total guests on the individual registration.</description>
    <inlineHelpText>If other attendees is active, how many other attendees are allowed to this event. This does NOT control the Guest Registration process.</inlineHelpText>
    <label>Max Other Attendees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>