force-app/main/default/objects/summit__Summit_Events__c/fields/summit__No_Guest_Registrations_Added_Message__c.field-meta.xml
<CustomField>
    <fullName>summit__No_Guest_Registrations_Added_Message__c</fullName>
    <description>Message that appears when no guest registrations have been added yet. Defaults to &quot;No guest added yet.&quot;</description>
    <inlineHelpText>Message that appears when no guest registrations have been added yet. Defaults to &quot;No guest added yet.&quot;</inlineHelpText>
    <label>No Guest Registrations Added Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>