force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Payment_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Payment_Button_Label__c</fullName>
    <defaultValue>&quot;Make Payment&quot;</defaultValue>
    <description>If a gateway is defined and there are fees for the event the submit page will show a payment button. This label allows you to adjust its messaging. Default is &quot;Make Payment.&quot;</description>
    <inlineHelpText>If a gateway is defined and there are fees for the event the submit page will show a payment button. This label allows you to adjust its messaging. Default is &quot;Make Payment.&quot;</inlineHelpText>
    <label>Payment Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>