force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>summit__Payment_Gateway__c</fullName>
    <description>Payment gateways are installed as external packages. If you have installed a payment gateway outside of Summit Events App you can add the name of it here. Follow the instructions of your gateway install.</description>
    <inlineHelpText>Payment gateways are installed as external packages. If you have installed a payment gateway outside of Summit Events App you can add the name of it here. Follow the instructions of your gateway install.</inlineHelpText>
    <label>Payment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No Gateway</fullName>
                <default>true</default>
                <label>No Gateway</label>
            </value>
            <value>
                <fullName>UPayPayment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>