force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Person_Creation_Duplicate_Rule__c.field-meta.xml
<CustomField>
    <fullName>summit__Person_Creation_Duplicate_Rule__c</fullName>
    <description>The name of the Salesforce Duplicate Rule used as the logic for custom Person Account Matching</description>
    <label>Person Creation Duplicate Rule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>summit__Person_Matching_Rules__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Person Account Duplicate Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>