force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Person_Matching_No_Match_Behavior__c.field-meta.xml
<CustomField>
    <fullName>summit__Person_Matching_No_Match_Behavior__c</fullName>
    <label>Person Matching No Match Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create Person Account</fullName>
                <default>true</default>
                <label>Create Person Account</label>
            </value>
            <value>
                <fullName>Skip Creating Person Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>