force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Person_Matching_Rules__c.field-meta.xml
<CustomField>
    <fullName>summit__Person_Matching_Rules__c</fullName>
    <description>The type of person account matching you wish to use if allow for it in the person account creation settings.</description>
    <inlineHelpText>The type of person account matching you wish to use if allow for it in the person account creation settings.</inlineHelpText>
    <label>Person Matching Rules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use Salesforce Duplicate Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>