force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Phone_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Phone_Label__c</fullName>
    <defaultValue>&quot;Please provide either a home or mobile number&quot;</defaultValue>
    <description>Label for the Phone field in the Registration Form</description>
    <inlineHelpText>Label for the Phone field in the Registration Form</inlineHelpText>
    <label>Phone Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>