force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Phone_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Phone_Type_Label__c</fullName>
    <defaultValue>&quot;Type&quot;</defaultValue>
    <description>Label for the Phone Type field in the Registration Form</description>
    <inlineHelpText>Label for the Phone Type field in the Registration Form</inlineHelpText>
    <label>Phone Type Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>