force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Preferred_Class_Year_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Preferred_Class_Year_Label__c</fullName>
    <defaultValue>&quot;Preferred Class Year&quot;</defaultValue>
    <description>Label for the Preferred Class Year field in the Registration Form</description>
    <inlineHelpText>Label for the Preferred Class Year field in the Registration Form</inlineHelpText>
    <label>Preferred Class Year Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>