force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Preferred_First_Name_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Preferred_First_Name_Label__c</fullName>
    <defaultValue>&quot;Preferred First Name&quot;</defaultValue>
    <description>Label for the Preferred First Name field in the Registration Form</description>
    <inlineHelpText>Label for the Preferred First Name field in the Registration Form</inlineHelpText>
    <label>Preferred First Name Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>