force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Private_Event__c.field-meta.xml
<CustomField>
    <fullName>summit__Private_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if an event is private and should not appear on a list/calendar of events.</description>
    <inlineHelpText>Indicate if an event is private and should not appear on a list/calendar of events. If selected, all related instances will be removed from the list/calendar.</inlineHelpText>
    <label>Private Event</label>
    <type>Checkbox</type>
</CustomField>