force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Program_Filter_3__c.field-meta.xml
<CustomField>
    <fullName>summit__Program_Filter_3__c</fullName>
    <description>Text version of program pick-list for filtering. No for user display or editing.</description>
    <inlineHelpText>Text version of program pick-list for filtering. No for user display or editing.</inlineHelpText>
    <label>Program Filter 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>